fixed gallery spacing and connected some links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ header {
     z-index: 3;
 }
 
-.centerHeaderContent{
+.centerHeaderContent {
     width: 960px;
     height: 50px;
     margin: 0 auto 0 auto;
@@ -61,14 +61,15 @@ a.navLinks:hover {
 
 section {
     clear: both;
-    height: 10%; /* oddly enough it seems like theis height doesnt matter */
+    height: 10%;
+    /* oddly enough it seems like theis height doesnt matter */
     width: 960px;
     margin: 100px auto 150px auto;
     /* not sure if the 7% on bottom is good 
     but helps footer not colide when zooming in */
     background-color: #ffffff;
     border-style: solid;
-    border-color: #dddddd; 
+    border-color: #dddddd;
     padding: 1% 2% 1% 2%;
 }
 
@@ -83,7 +84,7 @@ h2 {
     padding: 0 2% 0 0;
 }
 
-p{
+p {
     line-height: 1.5;
 }
 
@@ -120,15 +121,17 @@ textarea {
     border: 1px solid black;
 }
 
-.galleryBackground{
+.galleryBackground {
     overflow: hidden;
-/*     margin-left: 10%;
- */    display: flex;
+    display: flex;
     flex-wrap: wrap;
+    /* some kind of margin to make this better */
+    /* margin-left: 2%; */
+    justify-content: center;
 }
 
 .gallerySpacer {
-    margin: 0 20px 10px 20px;
+    margin: 0 20px 15px 0px;
 }
 
 a.galleryContainer {
@@ -142,7 +145,7 @@ img.galleryLink {
     height: 180px;
 }
 
-h4{
+h4 {
     position: absolute;
     top: 65%;
     left: 50%;
@@ -162,29 +165,54 @@ footer p {
     text-align: center;
 }
 
+.active {
+    font-weight: bolder;
+}
+
 /* used for headings and backgrounds */
-h2 {color: #4aaaa5}
+h2 {
+    color: #4aaaa5
+}
 
 /* Main header background color & Main content background color*/
-h1, h4 {color: #ffffff}
+h1,
+h4 {
+    color: #ffffff
+}
 
 /* For heading fonts use */
-h1, h2, h3, h4 {font-family: 'Georgia', Times, Times New Roman, serif;}
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
 
 /* For all other fonts use */
-p, a, li {font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;}
+p,
+a,
+li {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
 
 /* used for paragraphs and all text besides the headings */
-.navLinks, p, li, h3 {color: #777777}
+.navLinks,
+p,
+li,
+h3 {
+    color: #777777
+}
 
 @media screen and (max-width:980px) {
 
     section {
         width: 748px;
     }
-    .centerHeaderContent{
+
+    .centerHeaderContent {
         width: 748px;
     }
+
     #aboutMe {
         height: 300px;
         width: 250px;
@@ -195,9 +223,11 @@ p, a, li {font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;}
     section {
         width: 620px;
     }
-    .centerHeaderContent{
+
+    .centerHeaderContent {
         width: 620px;
     }
+
     #aboutMe {
         height: 275px;
         width: 225px;
@@ -205,25 +235,26 @@ p, a, li {font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;}
 }
 
 
-@media screen and (min-width: 321px) and 
-(max-width:640px) {
+@media screen and (min-width: 321px) and (max-width:640px) {
     section {
         width: 90%;
     }
-    .centerHeaderContent{
+
+    .centerHeaderContent {
         width: 90%;
     }
+
     #aboutMe {
         height: 250px;
         width: 200px;
     }
+
     section {
         margin-bottom: 120px;
     }
 }
 
-@media screen and (max-width:611px) 
-{
+@media screen and (max-width:640px) {
     ul {
         display: block;
         clear: both;
@@ -234,11 +265,13 @@ p, a, li {font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;}
         margin: 2px 0 400px -50px;
         background-color: #777777;
         border-bottom: 2px solid #cccccc;
+        justify-content: right;
     }
 
     .navLinks {
         color: #ffffff;
     }
+
     section {
         margin-top: 130px;
         margin-bottom: 120px;
@@ -251,40 +284,46 @@ p, a, li {font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;}
     }
 
     h1 {
-        padding-left: 13.2px; /* gotta go the distance */
+        padding-left: 13.2px;
+        /* gotta go the distance */
     }
 
 }
 
-@media screen and (max-width:475px) 
-{
-    .clear{
+@media screen and (max-width:475px) {
+    .clear {
         display: block;
         clear: both;
     }
-    .mediaCenter{
-      margin: 0 auto;
-      width: 100%;
-      float: none;
+
+    .mediaCenter {
+        margin: 0 auto;
+        width: 100%;
+        float: none;
     }
 
     #aboutMe {
         margin: 0 0 0 25%;
     }
+
 }
 
 @media screen and (max-width:320px) {
     section {
         width: 300px;
     }
-    .centerHeaderContent{
+
+    .centerHeaderContent {
         width: 320px;
     }
+
     #aboutMe {
         height: 200px;
         width: 150px;
     }
-    .makeBlock{
+
+    .makeBlock {
         display: block;
     }
+
 }
